--- a/titanic.html
+++ b/titanic.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
-      rel="stylesheet"
-      href="bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="logo.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,7 +15,8 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4" id="logo"></div>
-      </div>  <!--end logo row-->
+      </div>
+      <!--end logo row-->
 
       <div class="row">
         <div class="col-sm-12" id="menu">
@@ -42,13 +40,27 @@
                     >Featured</a
                   >
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
-                    <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
-                    <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
-                    <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
-                    <a class="dropdown-item" href="vaccine.html">Vaccine = Mind Control!</a>
-                    <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
-                    <a class="dropdown-item" href="animals.html">Animals Aren't Real!</a>
+                    <a class="dropdown-item" href="flatEarth.html"
+                      >The Earth is Flat!</a
+                    >
+                    <a class="dropdown-item" href="birds.html"
+                      >Birds Arent Real!</a
+                    >
+                    <a class="dropdown-item" href="titanic.html"
+                      >The Titanic Never Sank!</a
+                    >
+                    <a class="dropdown-item" href="bees.html"
+                      >Bees Arent Real!</a
+                    >
+                    <a class="dropdown-item" href="vaccine.html"
+                      >Vaccine = Mind Control!</a
+                    >
+                    <a class="dropdown-item" href="math.html"
+                      >Math Isn't Real!</a
+                    >
+                    <a class="dropdown-item" href="animals.html"
+                      >Animals Aren't Real!</a
+                    >
                   </div>
                 </li>
                 <li class="nav-item">
@@ -58,80 +70,128 @@
                   <a class="nav-link" href="about.html">About</a>
                 </li>
               </ul>
-            </div>  <!--end div navbar-->
-          </nav>  <!--end navbar-->
-        </div>  <!--end menu column-->
-      </div>  <!--end menu row-->
+            </div>
+            <!--end div navbar-->
+          </nav>
+          <!--end navbar-->
+        </div>
+        <!--end menu column-->
+      </div>
+      <!--end menu row-->
 
       <div class="row">
         <div class="col-sm-12" id="vaccinebox">
-          <h2>
-            Did the Titanic Really Ever Sink?
-          </h2>
+          <h2>Did the Titanic Really Ever Sink?</h2>
           <h6>
-            Proponents of the swap theory have pointed out disparities in the number of portholes on the ships. The Olympic had 16 and the Titanic had 14.
-            Photographs taken of the Titanic in dry dock show it with 14 portholes. But by the time of its doomed maiden voyage it now had 16, just like the Olympic.
-            Was this evidence that the ships had been swapped or just that they had added two extra portholes as part of aesthetic changes to the Titanic?
-            During construction — top, Titanic had 14 portholes. By its maiden voyage — bottom, it had 16
-            Other evidence supports the switch ,  the windows on the Olympic were somewhat unevenly spaced, but more evenly spaced on the Titanic.
-            Again, by the time of its maiden voyage, the Titanic had acquired unevenly spaced windows like the Olympic.
-            List to port
+            Proponents of the swap theory have pointed out disparities in the
+            number of portholes on the ships. The Olympic had 16 and the Titanic
+            had 14. Photographs taken of the Titanic in dry dock show it with 14
+            portholes. But by the time of its doomed maiden voyage it now had
+            16, just like the Olympic. Was this evidence that the ships had been
+            swapped or just that they had added two extra portholes as part of
+            aesthetic changes to the Titanic? During construction — top, Titanic
+            had 14 portholes. By its maiden voyage — bottom, it had 16 Other
+            evidence supports the switch ,  the windows on the Olympic were
+            somewhat unevenly spaced, but more evenly spaced on the Titanic.
+            Again, by the time of its maiden voyage, the Titanic had acquired
+            unevenly spaced windows like the Olympic. List to port
           </h6>
           <h6>
-            The damage to the Olympic after its collision with the Hawke lent it a noticeable and permanent 2˚ list to port. The undamaged Titanic had no such list.
-            Lawrence Beesley reported the Titanic listed to port like the Olympic
-            However, one second-class passenger who survived the sinking -  Lawrence Beesley, later reported the Titanic did, in fact, list to port, stating "the Titanic listed to port...It was plain she did so, for the sky-line and sea on the port side were visible most of the time and on the starboard only sky".
-            Beesley, a science teacher, was considered a reliable observer, and would later write one of the first books about the Titanic disaster.
-            Rumours amongst crew
+            The damage to the Olympic after its collision with the Hawke lent it
+            a noticeable and permanent 2˚ list to port. The undamaged Titanic
+            had no such list. Lawrence Beesley reported the Titanic listed to
+            port like the Olympic However, one second-class passenger who
+            survived the sinking -  Lawrence Beesley, later reported the Titanic
+            did, in fact, list to port, stating "the Titanic listed to port...It
+            was plain she did so, for the sky-line and sea on the port side were
+            visible most of the time and on the starboard only sky". Beesley, a
+            science teacher, was considered a reliable observer, and would later
+            write one of the first books about the Titanic disaster. Rumours
+            amongst crew
           </h6>
           <h6>
-            There was a nationwide coal strike during the launch of the Titanic, leading to thousands of firemen, boiler stokers and greasers short of work.
-            Yet despite this the Titanic struggled to find crew, with many men refusing to work on the ship at any price.
-            Rumours were circulating amongst the workers at Harland and Wolff that the ships had been swapped as part of an insurance scam, and Titanic was to be sunk.
-            Did foreknowledge of the sinking of the Titanic frighten men off from wanting to work on the ship?
-            Titanic during its construction at the Harland and Wolff shipyard, Belfast
-            Despite the immense fanfare and hype that surrounded the Titanic launch, it was only just over half full when it left Southampton on its doomed voyage.
-            Did White Star want to minimise the number of passengers because it intended to scuttle the ship? Or had the rumours of the insurance scam spread outside of the shipyards?
-            Several last minute cancellations from high profile passengers certainly suggest some kind of foreknowledge.
-            Last minute cancellations
+            There was a nationwide coal strike during the launch of the Titanic,
+            leading to thousands of firemen, boiler stokers and greasers short
+            of work. Yet despite this the Titanic struggled to find crew, with
+            many men refusing to work on the ship at any price. Rumours were
+            circulating amongst the workers at Harland and Wolff that the ships
+            had been swapped as part of an insurance scam, and Titanic was to be
+            sunk. Did foreknowledge of the sinking of the Titanic frighten men
+            off from wanting to work on the ship? Titanic during its
+            construction at the Harland and Wolff shipyard, Belfast Despite the
+            immense fanfare and hype that surrounded the Titanic launch, it was
+            only just over half full when it left Southampton on its doomed
+            voyage. Did White Star want to minimise the number of passengers
+            because it intended to scuttle the ship? Or had the rumours of the
+            insurance scam spread outside of the shipyards? Several last minute
+            cancellations from high profile passengers certainly suggest some
+            kind of foreknowledge. Last minute cancellations
           </h6>
           <h6>
-            Many of the richest and most prestigious names in early 20th-century society were booked onto the Titanic.
-            JP Morgan  -  the international financier who owned the White Star’s parent company, was due to travel on the Titanic but cancelled his trip a few days before the departure, claiming illness.
-            JP Morgan and other prominent figures cancelled at the last minute
-            A New York Times reported discovered this to be a lie, Morgan was actually seen perfectly well with his mistress in France on the very day Titanic sunk.
-            Industrialist Henry Clay Frick and his wife, banker Horace J. Harding and billionaire George Washington Vanderbilt - all connected to Morgan, were amongst several other prominent figures who cancelled at the last minute.
-            Californian
+            Many of the richest and most prestigious names in early 20th-century
+            society were booked onto the Titanic. JP Morgan  -  the
+            international financier who owned the White Star’s parent company,
+            was due to travel on the Titanic but cancelled his trip a few days
+            before the departure, claiming illness. JP Morgan and other
+            prominent figures cancelled at the last minute A New York Times
+            reported discovered this to be a lie, Morgan was actually seen
+            perfectly well with his mistress in France on the very day Titanic
+            sunk. Industrialist Henry Clay Frick and his wife, banker Horace J.
+            Harding and billionaire George Washington Vanderbilt - all connected
+            to Morgan, were amongst several other prominent figures who
+            cancelled at the last minute. Californian
           </h6>
           <h6>
-            The SS Californian, also owned by JP Morgan, was a large passenger ship that was ultimately blamed for the loss of life on the Titanic.
+            The SS Californian, also owned by JP Morgan, was a large passenger
+            ship that was ultimately blamed for the loss of life on the Titanic.
             It behaved somewhat oddly around the time of the Titanic’s voyage.
-            Carrying no passengers,  it steamed into the middle of the Atlantic, stopped and waited. It’s only cargo was 3000 woollen blankets and jumpers.
-            What was the purpose behind this curious manoeuvre? Was the Californian intended to rescue the Titanic’s passengers after its deliberate sinking?
-            Edith Russell, a survivor of the sinking, was adamant that Titanic officers assured her the Californian was on its way.
-            Author Robin Gardiner suggests serious navigation errors lead to the Californian stopping in the wrong area, some 12 miles away from the Titanic.
-            The lifeboats on the Titanic weren’t sufficient to save all the passengers
-            With the Californian unable to complete its rescue mission the Titanic was doomed, and some 1500 passengers and crew perished in one of the worst maritime disasters in modern history.
-            The wreck
+            Carrying no passengers,  it steamed into the middle of the Atlantic,
+            stopped and waited. It’s only cargo was 3000 woollen blankets and
+            jumpers. What was the purpose behind this curious manoeuvre? Was the
+            Californian intended to rescue the Titanic’s passengers after its
+            deliberate sinking? Edith Russell, a survivor of the sinking, was
+            adamant that Titanic officers assured her the Californian was on its
+            way. Author Robin Gardiner suggests serious navigation errors lead
+            to the Californian stopping in the wrong area, some 12 miles away
+            from the Titanic. The lifeboats on the Titanic weren’t sufficient to
+            save all the passengers With the Californian unable to complete its
+            rescue mission the Titanic was doomed, and some 1500 passengers and
+            crew perished in one of the worst maritime disasters in modern
+            history. The wreck
           </h6>
           <h6>
-            The wreck of the Titanic was discovered by Robert Ballard in 1985. Some evidence from the wreck supports the switch theory.
-            The stamp 401,  the ID number used for the Titanic at Harland and Wolff, can be seen on the Titanic’s propeller.
-            However, some authors have suggested that the Titanic propeller was fitted to the Olympic during its repair following the collision with the Hawke.
-            If true, this would be strong evidence that the vessel on the ocean floor was really the Olympic.
-            The wreck of the Titanic was found by Robert Ballard in 1985
-            What appear to be the letters M and P can also be seen on the side of the wreck. Could that be the remains of the ship's original etched nameplate -  ‘OLYMPIC’, covered over with the Titanic’s as part of the scam
-            The wreck appears to show some evidence of the grey paint used as an undercoat on the Olympic. The Titanic used black paint for its undercoat.
-            Lack of media scrutiny
+            The wreck of the Titanic was discovered by Robert Ballard in 1985.
+            Some evidence from the wreck supports the switch theory. The stamp
+            401,  the ID number used for the Titanic at Harland and Wolff, can
+            be seen on the Titanic’s propeller. However, some authors have
+            suggested that the Titanic propeller was fitted to the Olympic
+            during its repair following the collision with the Hawke. If true,
+            this would be strong evidence that the vessel on the ocean floor was
+            really the Olympic. The wreck of the Titanic was found by Robert
+            Ballard in 1985 What appear to be the letters M and P can also be
+            seen on the side of the wreck. Could that be the remains of the
+            ship's original etched nameplate -  ‘OLYMPIC’, covered over with the
+            Titanic’s as part of the scam The wreck appears to show some
+            evidence of the grey paint used as an undercoat on the Olympic. The
+            Titanic used black paint for its undercoat. Lack of media scrutiny
           </h6>
           <h6>
-            Insurance scams and maritime fraud were common at the time of the Titanic’s sinking.
-            Whilst it seems unlikely such a scam could be pulled off today, the lack of media coverage in 1912 makes it more credible.
-            Only one film survives of the Titanic and the photo record is also scant. With the two ships extremely similar, it is argued that only the most eagle-eyed would ever have spotted the swap.
+            Insurance scams and maritime fraud were common at the time of the
+            Titanic’s sinking. Whilst it seems unlikely such a scam could be
+            pulled off today, the lack of media coverage in 1912 makes it more
+            credible. Only one film survives of the Titanic and the photo record
+            is also scant. With the two ships extremely similar, it is argued
+            that only the most eagle-eyed would ever have spotted the swap.
           </h6>
-          <img id="titanicImg" src="https://shorthand-social.imgix.net/prod/story/jCPyIbzzPVc/media/aa324800ec5711e58172cfb1db5e8826/original.jpg?w=1500&h=1500&fit=clip&fm=jpg&q=75" />
-        </div>  <!--end box column-->
-      </div>  <!--end box row-->
-    </div>  <!--end container div-->
+          <img
+            id="titanicImg"
+            src="https://shorthand-social.imgix.net/prod/story/jCPyIbzzPVc/media/aa324800ec5711e58172cfb1db5e8826/original.jpg?w=1500&h=1500&fit=clip&fm=jpg&q=75"
+          />
+        </div>
+        <!--end box column-->
+      </div>
+      <!--end box row-->
+    </div>
+    <!--end container div-->
   </body>
 </html>
