--- a/index.html
+++ b/index.html
@@ -71,53 +71,59 @@
       <div class="row">
         <div class="col-sm-12" id="box">
           <h1>Featured</h1>
-          <div id="homebox">
-            <h1>Flat Is Fact</h1>
-            <img id="earthphoto" src="earthphoto.jpg" />
-            <form id="flatreadbutton" action="flatEarth.html">
+          <div id="homebox" class="grid-container">
+            <div id="grid-item" class="grid-item">
+              <h1>Flat Is Fact</h1>
+              <img id="earthphoto" src="earthphoto.jpg" />
+              <form id="flatreadbutton" action="flatEarth.html">
               <input id="flatreadbutton" type="submit" value="Read Article" />
             </form>
+            </div>
+            <div id="grid-item-middle" class="grid-item">
+              <h1>Do Vaccines Contain Mind Control</h1>
+              <form id="vaccinebutton" action="vaccine.html">
+                <input id="vaccinebutton" type="submit" value="Read Article" />
+              </form>
+              <img id="vaccineBrain" src="vaccineBrain.jpg" />
+            </div>
+            <div id="grid-item" class="grid-item">
+              <h1>Did the Titanic Really Ever Sink?</h1>
+              <form id="titanicbutton" action="titanic.html">
+                <input id="titanicbutton" type="submit" value="Read Article" />
+              </form>
+              <img id="titanicjpg" src="titanic.jpg" />
+            </div>  
+            <div id="grid-item-middle-row" class="grid-item">
+              <h1>birds</h1>
+              <form id="titanicbutton" action="titanic.html">
+                <input id="titanicbutton" type="submit" value="Read Article" />
+              </form>
+              <img id="titanicjpg" src="birdfish.jpg" />
+            </div>
+            <div id="grid-item-middle-row-middle" class="grid-item">
+              <h1>bees</h1>
+              <form id="titanicbutton" action="titanic.html">
+                <input id="titanicbutton" type="submit" value="Read Article" />
+              </form>
+              <img id="titanicjpg" src="bee.jpg" />
+            </div>
+            <div id="grid-item-middle-row" class="grid-item">
+              <h1>animals</h1>
+              <form id="titanicbutton" action="titanic.html">
+                <input id="titanicbutton" type="submit" value="Read Article" />
+              </form>
+              <img id="titanicjpg" src="bat.png" />
+            </div>  
+            <div id="grid-item" class="grid-item">
+              Math
+            </div>
+            <div id="grid-item-middle" class="grid-item">
+              Electricity isnt real
+            </div>
+            <div id="grid-item" class="grid-item">
+              9/11 didnt happen
+            </div>  
           </div>
-          <div id="homebox">
-            <h1>
-              Do COVID Vaccines Contain Nanoparticles That Self-Assemble to
-              Build a Biocircuitry “Operating System” to Control Your Moods and
-              Thoughts?
-            </h1>
-            <form id="vaccinebutton" action="vaccine.html">
-              <input id="vaccinebutton" type="submit" value="Read Article" />
-            </form>
-            <img id="vaccineBrain" src="vaccineBrain.jpg" />
-          </div>
-          <div id="homebox">
-            <h1>Did the Titanic Really Ever Sink?</h1>
-            <form id="titanicbutton" action="titanic.html">
-              <input id="titanicbutton" type="submit" value="Read Article" />
-            </form>
-            <img id="titanicjpg" src="titanic.jpg" />
-          </div>
-          <div id="homebox">
-            <h1>birds</h1>
-            <form id="titanicbutton" action="titanic.html">
-              <input id="titanicbutton" type="submit" value="Read Article" />
-            </form>
-            <img id="titanicjpg" src="birdfish.jpg" />
-          </div>
-          <div id="homebox">
-            <h1>bees</h1>
-            <form id="titanicbutton" action="titanic.html">
-              <input id="titanicbutton" type="submit" value="Read Article" />
-            </form>
-            <img id="titanicjpg" src="bee.jpg" />
-          </div>
-          <div id="homebox">
-            <h1>animals</h1>
-            <form id="titanicbutton" action="titanic.html">
-              <input id="titanicbutton" type="submit" value="Read Article" />
-            </form>
-            <img id="titanicjpg" src="bat.png" />
-          </div>
-
         </div>
       </div>
     </div>
