updated id's and started finishing the grid thing

--- a/index.html
+++ b/index.html
@@ -81,41 +81,41 @@
             </div>
             <div id="grid-item-middle" class="grid-item">
               <h1>Do Vaccines Contain Mind Control</h1>
+              <img id="vaccineBrain" src="vaccineBrain.jpg" />
               <form id="vaccinebutton" action="vaccine.html">
                 <input id="vaccinebutton" type="submit" value="Read Article" />
               </form>
-              <img id="vaccineBrain" src="vaccineBrain.jpg" />
             </div>
             <div id="grid-item" class="grid-item">
               <h1>Did the Titanic Really Ever Sink?</h1>
+              <img id="titanicjpg" src="titanic.jpg" />
               <form id="titanicbutton" action="titanic.html">
                 <input id="titanicbutton" type="submit" value="Read Article" />
               </form>
-              <img id="titanicjpg" src="titanic.jpg" />
             </div>  
             <div id="grid-item-middle-row" class="grid-item">
               <h1>birds</h1>
-              <form id="titanicbutton" action="titanic.html">
-                <input id="titanicbutton" type="submit" value="Read Article" />
+              <img id="birdfishjpg" src="birdfish.jpg" />
+              <form id="birdbutton" action="birds.html">
+                <input id="birdbutton" type="submit" value="Read Article" />
               </form>
-              <img id="titanicjpg" src="birdfish.jpg" />
             </div>
             <div id="grid-item-middle-row-middle" class="grid-item">
               <h1>bees</h1>
-              <form id="titanicbutton" action="titanic.html">
-                <input id="titanicbutton" type="submit" value="Read Article" />
+              <img id="beejpg" src="bee.jpg" />
+              <form id="beebutton" action="bees.html">
+                <input id="beebutton" type="submit" value="Read Article" />
               </form>
-              <img id="titanicjpg" src="bee.jpg" />
             </div>
             <div id="grid-item-middle-row" class="grid-item">
               <h1>animals</h1>
-              <form id="titanicbutton" action="titanic.html">
-                <input id="titanicbutton" type="submit" value="Read Article" />
+              <img id="animaljpg" src="bat.png" />
+              <form id="animalbutton" action="titanic.html">
+                <input id="animalbutton" type="submit" value="Read Article" />
               </form>
-              <img id="titanicjpg" src="bat.png" />
             </div>  
             <div id="grid-item" class="grid-item">
-              Math
+              Drugs give you are the good for you
             </div>
             <div id="grid-item-middle" class="grid-item">
               Electricity isnt real
