--- a/index.html
+++ b/index.html
@@ -71,6 +71,21 @@
       <div class="row">
         <div class="col-sm-12" id="box">
           <h1>Featured</h1>
+          <div class="cards">
+            <div class="card">ONE</div>
+            <div class="card">TWO</div>
+            <div class="card">THREE</div>
+            <div class="card">FOUR</div>
+            <div class="card">FIVE</div>
+            <div class="card">SIX</div>
+            <div class="card">SEVEN</div>
+            <div class="card">EIGHT</div>
+            <div class="card">NINE</div>
+            <div class="card">TEN</div>
+            <div class="card">ELEVEN</div>
+            <div class="card">TWELVE</div>
+          </div>
+          <!--
           <div id="homebox" class="grid-container">
             <div id="grid-item" class="grid-item">
               <h1>Flat Is Fact</h1>
@@ -122,8 +137,9 @@
             </div>
             <div id="grid-item" class="grid-item">
               9/11 didnt happen
-            </div>  
+            </div>
           </div>
+          --> 
         </div>
       </div>
     </div>
