--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
         <div class="col-sm-12" id="box">
           <h1>Featured</h1>
           <div class="cards">
-            <div class="card">ONE</div>
-            <div class="card">TWO</div>
-            <div class="card">THREE</div>
-            <div class="card">FOUR</div>
-            <div class="card">FIVE</div>
-            <div class="card">SIX</div>
-            <div class="card">SEVEN</div>
-            <div class="card">EIGHT</div>
-            <div class="card">NINE</div>
-            <div class="card">TEN</div>
-            <div class="card">ELEVEN</div>
-            <div class="card">TWELVE</div>
+            <div id="grid-item" class="card">ONE</div>
+            <div id="grid-item" class="card">TWO</div>
+            <div id="grid-item" class="card">THREE</div>
+            <div id="grid-item" class="card">FOUR</div>
+            <div id="grid-item" class="card">FIVE</div>
+            <div id="grid-item" class="card">SIX</div>
+            <div id="grid-item" class="card">SEVEN</div>
+            <div id="grid-item" class="card">EIGHT</div>
+            <div id="grid-item" class="card">NINE</div>
+            <div id="grid-item" class="card">TEN</div>
+            <div id="grid-item" class="card">ELEVEN</div>
+            <div id="grid-item" class="card">TWELVE</div>
           </div>
           <!--
           <div id="homebox" class="grid-container">
