--- a/index.html
+++ b/index.html
@@ -72,19 +72,48 @@
         <div class="col-sm-12" id="box">
           <h1>Featured</h1>
           <div class="cards">
-            <div id="grid-item" class="card">ONE</div>
-            <div id="grid-item" class="card">TWO</div>
-            <div id="grid-item" class="card">THREE</div>
-            <div id="grid-item" class="card">FOUR</div>
-            <div id="grid-item" class="card">FIVE</div>
-            <div id="grid-item" class="card">SIX</div>
-            <div id="grid-item" class="card">SEVEN</div>
-            <div id="grid-item" class="card">EIGHT</div>
-            <div id="grid-item" class="card">NINE</div>
-            <div id="grid-item" class="card">TEN</div>
-            <div id="grid-item" class="card">ELEVEN</div>
-            <div id="grid-item" class="card">TWELVE</div>
+            <div id="grid-item" class="card">
+              <h1>Flat Is Fact</h1>
+              <img id="earthphoto" src="earthphoto.jpg" />
+              <form id="flatreadbutton" action="flatEarth.html">
+                <input id="flatreadbutton" type="submit" value="Read Article" />
+              </form>
+            </div>
+            <div id="grid-item" class="card">
+
+            </div>
+            <div id="grid-item" class="card">
+              
+            </div>
+            <div id="grid-item" class="card">
+
+            </div>
+            <div id="grid-item" class="card">
+
+            </div>
+            <div id="grid-item" class="card">
+
+            </div>
+            <div id="grid-item" class="card">
+
+            </div>
+            <div id="grid-item" class="card">
+
+            </div>
+            <div id="grid-item" class="card">
+
+            </div>
+            <div id="grid-item" class="card">
+
+            </div>
+            <div id="grid-item" class="card">
+
+            </div>
+            <div id="grid-item" class="card">
+              
+            </div>
           </div>
+        -->
           <!--
           <div id="homebox" class="grid-container">
             <div id="grid-item" class="grid-item">
