--- a/birds.html
+++ b/birds.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RealFacts: Birds</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="birds.css" />
   </head>
   <body>
     <div class="container">
