fixed css files

--- a/animals.html
+++ b/animals.html
@@ -67,7 +67,7 @@
       </div>
       <!-- end menu row -->
       <div class="row">
-        <div class="col-sm-12" id="vaccinebox">
+        <div class="col-sm-12" id="animalbox">
           <h2>
             Animals Are'nt Real!
           </h2>
