--- a/birds.html
+++ b/birds.html
@@ -73,7 +73,7 @@
           <h6>
             birds arent real because birds
           </h6>
-          <img id="BirdImg" src="birdTelescope.jpg" />
+          <img id="birdImg" src="birdTelescope.jpg" />
         </div>
       </div>
     </div>
