--- a/titanic.html
+++ b/titanic.html
@@ -82,7 +82,7 @@
       <!--end menu row-->
 
       <div class="row">
-        <div class="col-sm-12" id="vaccinebox">
+        <div class="col-sm-12" id="titanicbox">
           <h2>Did the Titanic Really Ever Sink?</h2>
           <h6>
             Proponents of the swap theory have pointed out disparities in the
