fixed bird navbar

--- a/birds.html
+++ b/birds.html
@@ -22,7 +22,6 @@
         <div class="col-sm-4" id="logo"></div>
       </div>
       <!-- end logo row -->
-
       <div class="row">
         <div class="col-sm-12" id="menu">
           <nav class="navbar navbar-expand-sm bg-info navbar-light">
@@ -44,7 +43,8 @@
                     data-toggle="dropdown"
                     >Featured</a
                   >
-                  <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
                     <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
                     <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
                     <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
