--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col-sm-12" id="box">
           <h1>Featured</h1>
-          <div id="homebox" class="grid-container">
+          <div id="box" class="grid-container">
             <div id="grid-item" class="grid-item">
               <h1>Flat Is Fact</h1>
               <img id="earthphoto" src="earthphoto.jpg" />
