testing final home box mod

--- a/index.html
+++ b/index.html
@@ -69,15 +69,14 @@
       </div>
       <!-- end menu row -->
       <div class="row">
-        <div class="col-sm-12" id="box">
+        <div class="col-sm-12" id="homebox">
           <h1>Featured</h1>
-          <div id="box" class="grid-container">
             <div id="grid-item" class="grid-item">
               <h1>Flat Is Fact</h1>
               <img id="earthphoto" src="earthphoto.jpg" />
               <form id="flatreadbutton" action="flatEarth.html">
-              <input id="flatreadbutton" type="submit" value="Read Article" />
-            </form>
+                <input id="flatreadbutton" type="submit" value="Read Article" />
+              </form>
             </div>
             <div id="grid-item-middle" class="grid-item">
               <h1>Do Vaccines Contain Mind Control</h1>
@@ -123,7 +122,6 @@
             <div id="grid-item" class="grid-item">
               9/11 didnt happen
             </div>
-          </div>
         </div>
       </div>
     </div>
