--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
       <!-- end menu row -->
       <div class="row">
         <div class="col-sm-12" id="homebox">
-          <h1>Featured</h1>
+          <div id="box" class="grid-container">
+            <h1>Featured</h1>
             <div id="grid-item" class="grid-item">
               <h1>Flat Is Fact</h1>
               <img id="earthphoto" src="earthphoto.jpg" />
@@ -122,6 +123,7 @@
             <div id="grid-item" class="grid-item">
               9/11 didnt happen
             </div>
+          </div>
         </div>
       </div>
     </div>
