testing another thing

--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
       </div>
       <!-- end menu row -->
       <div class="row">
-        <div class="col-sm-12" id="homebox">
+        <div>
+          <h1>Featured</h1>
+        </div>
           <div id="box" class="grid-container">
-            <h1>Featured</h1>
             <div id="grid-item" class="grid-item">
               <h1>Flat Is Fact</h1>
               <img id="earthphoto" src="earthphoto.jpg" />
@@ -124,7 +125,6 @@
               9/11 didnt happen
             </div>
           </div>
-        </div>
       </div>
     </div>
     <!-- end container div -->
