--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div>
           <h1>Featured</h1>
         </div>
-          <div id="box" class="grid-container">
+          <div id="homebox" class="grid-container">
             <div id="grid-item" class="grid-item">
               <h1>Flat Is Fact</h1>
               <img id="earthphoto" src="earthphoto.jpg" />
