--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         </div>
       </div>
       <!-- end menu row -->
-      <div class="row">
-        <div>
+      <div id="menu-row" class="row">
+        <div id="box">
           <h1>Featured</h1>
         </div>
           <div id="homebox" class="grid-container">
