--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </div>
       <!-- end menu row -->
-      <div id="menu-row" class="row">
+      <div id="menu-row">
         <div id="box">
           <h1>Featured</h1>
         </div>
