--- a/index.html
+++ b/index.html
@@ -68,63 +68,63 @@
         </div>
       </div>
       <!-- end menu row -->
-      <div id="menu-row">
+      <div id="menu-row" class="row">
         <div id="box">
           <h1>Featured</h1>
         </div>
-          <div id="homebox" class="grid-container">
-            <div id="grid-item" class="grid-item">
-              <h1>Flat Is Fact</h1>
-              <img id="earthphoto" src="earthphoto.jpg" />
-              <form id="flatreadbutton" action="flatEarth.html">
-                <input id="flatreadbutton" type="submit" value="Read Article" />
-              </form>
-            </div>
-            <div id="grid-item-middle" class="grid-item">
-              <h1>Do Vaccines Contain Mind Control</h1>
-              <img id="vaccineBrain" src="vaccineBrain.jpg" />
-              <form id="vaccinebutton" action="vaccine.html">
-                <input id="vaccinebutton" type="submit" value="Read Article" />
-              </form>
-            </div>
-            <div id="grid-item" class="grid-item">
-              <h1>Did the Titanic Really Ever Sink?</h1>
-              <img id="titanicjpg" src="titanic.jpg" />
-              <form id="titanicbutton" action="titanic.html">
-                <input id="titanicbutton" type="submit" value="Read Article" />
-              </form>
-            </div>  
-            <div id="grid-item-middle-row" class="grid-item">
-              <h1>birds</h1>
-              <img id="birdfishjpg" src="birdfish.jpg" />
-              <form id="birdbutton" action="birds.html">
-                <input id="birdbutton" type="submit" value="Read Article" />
-              </form>
-            </div>
-            <div id="grid-item-middle-row-middle" class="grid-item">
-              <h1>bees</h1>
-              <img id="beejpg" src="bee.jpg" />
-              <form id="beebutton" action="bees.html">
-                <input id="beebutton" type="submit" value="Read Article" />
-              </form>
-            </div>
-            <div id="grid-item-middle-row" class="grid-item">
-              <h1>animals</h1>
-              <img id="animaljpg" src="bat.png" />
-              <form id="animalbutton" action="titanic.html">
-                <input id="animalbutton" type="submit" value="Read Article" />
-              </form>
-            </div>  
-            <div id="grid-item" class="grid-item">
-              Drugs give you are the good for you
-            </div>
-            <div id="grid-item-middle" class="grid-item">
-              Electricity isnt real
-            </div>
-            <div id="grid-item" class="grid-item">
-              9/11 didnt happen
-            </div>
+        <div id="homebox" class="grid-container">
+          <div id="grid-item" class="grid-item">
+            <h1>Flat Is Fact</h1>
+            <img id="earthphoto" src="earthphoto.jpg" />
+            <form id="flatreadbutton" action="flatEarth.html">
+              <input id="flatreadbutton" type="submit" value="Read Article" />
+            </form>
           </div>
+          <div id="grid-item-middle" class="grid-item">
+            <h1>Do Vaccines Contain Mind Control</h1>
+            <img id="vaccineBrain" src="vaccineBrain.jpg" />
+            <form id="vaccinebutton" action="vaccine.html">
+              <input id="vaccinebutton" type="submit" value="Read Article" />
+            </form>
+          </div>
+          <div id="grid-item" class="grid-item">
+            <h1>Did the Titanic Really Ever Sink?</h1>
+            <img id="titanicjpg" src="titanic.jpg" />
+            <form id="titanicbutton" action="titanic.html">
+              <input id="titanicbutton" type="submit" value="Read Article" />
+            </form>
+          </div>  
+          <div id="grid-item-middle-row" class="grid-item">
+            <h1>birds</h1>
+            <img id="birdfishjpg" src="birdfish.jpg" />
+            <form id="birdbutton" action="birds.html">
+              <input id="birdbutton" type="submit" value="Read Article" />
+            </form>
+          </div>
+          <div id="grid-item-middle-row-middle" class="grid-item">
+            <h1>bees</h1>
+            <img id="beejpg" src="bee.jpg" />
+            <form id="beebutton" action="bees.html">
+              <input id="beebutton" type="submit" value="Read Article" />
+            </form>
+          </div>
+          <div id="grid-item-middle-row" class="grid-item">
+            <h1>animals</h1>
+            <img id="animaljpg" src="bat.png" />
+            <form id="animalbutton" action="titanic.html">
+              <input id="animalbutton" type="submit" value="Read Article" />
+            </form>
+          </div>  
+          <div id="grid-item" class="grid-item">
+            Drugs give you are the good for you
+          </div>
+          <div id="grid-item-middle" class="grid-item">
+            Electricity isnt real
+          </div>
+          <div id="grid-item" class="grid-item">
+            9/11 didnt happen
+          </div>
+        </div>
       </div>
     </div>
     <!-- end container div -->
