changed margins on grid-items

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <input id="flatreadbutton" type="submit" value="Read Article" />
             </form>
           </div>
-          <div id="grid-item-middle" class="grid-item">
+          <div id="grid-item" class="grid-item">
             <h1>Do Vaccines Contain Mind Control</h1>
             <img id="vaccineBrain" src="vaccineBrain.jpg" />
             <form id="vaccinebutton" action="vaccine.html">
@@ -93,21 +93,21 @@
               <input id="titanicbutton" type="submit" value="Read Article" />
             </form>
           </div>  
-          <div id="grid-item-middle-row" class="grid-item">
+          <div id="grid-item" class="grid-item">
             <h1>birds</h1>
             <img id="birdfishjpg" src="birdfish.jpg" />
             <form id="birdbutton" action="birds.html">
               <input id="birdbutton" type="submit" value="Read Article" />
             </form>
           </div>
-          <div id="grid-item-middle-row-middle" class="grid-item">
+          <div id="grid-item" class="grid-item">
             <h1>bees</h1>
             <img id="beejpg" src="bee.jpg" />
             <form id="beebutton" action="bees.html">
               <input id="beebutton" type="submit" value="Read Article" />
             </form>
           </div>
-          <div id="grid-item-middle-row" class="grid-item">
+          <div id="grid-item" class="grid-item">
             <h1>animals</h1>
             <img id="animaljpg" src="bat.png" />
             <form id="animalbutton" action="titanic.html">
@@ -117,7 +117,7 @@
           <div id="grid-item" class="grid-item">
             Drugs give you are the good for you
           </div>
-          <div id="grid-item-middle" class="grid-item">
+          <div id="grid-item" class="grid-item">
             Electricity isnt real
           </div>
           <div id="grid-item" class="grid-item">
