changed header sizes

--- a/index.html
+++ b/index.html
@@ -73,42 +73,42 @@
         </div>
         <div id="homebox" class="grid-container">
           <div id="grid-item" class="grid-item">
-            <h1>Flat Is Fact</h1>
+            <h2>Flat Is Fact</h2>
             <img id="earthphoto" src="earthphoto.jpg" />
             <form id="flatreadbutton" action="flatEarth.html">
               <input id="flatreadbutton" type="submit" value="Read Article" />
             </form>
           </div>
           <div id="grid-item" class="grid-item">
-            <h1>Do Vaccines Contain Mind Control</h1>
+            <h2>Do Vaccines Control You?</h2>
             <img id="vaccineBrain" src="vaccineBrain.jpg" />
             <form id="vaccinebutton" action="vaccine.html">
               <input id="vaccinebutton" type="submit" value="Read Article" />
             </form>
           </div>
           <div id="grid-item" class="grid-item">
-            <h1>Did the Titanic Really Ever Sink?</h1>
+            <h2>Did the Titanic Really Ever Sink?</h2>
             <img id="titanicjpg" src="titanic.jpg" />
             <form id="titanicbutton" action="titanic.html">
               <input id="titanicbutton" type="submit" value="Read Article" />
             </form>
           </div>  
           <div id="grid-item" class="grid-item">
-            <h1>birds</h1>
+            <h2>birds</h2>
             <img id="birdfishjpg" src="birdfish.jpg" />
             <form id="birdbutton" action="birds.html">
               <input id="birdbutton" type="submit" value="Read Article" />
             </form>
           </div>
           <div id="grid-item" class="grid-item">
-            <h1>bees</h1>
+            <h2>bees</h2>
             <img id="beejpg" src="bee.jpg" />
             <form id="beebutton" action="bees.html">
               <input id="beebutton" type="submit" value="Read Article" />
             </form>
           </div>
           <div id="grid-item" class="grid-item">
-            <h1>animals</h1>
+            <h2>animals</h2>
             <img id="animaljpg" src="bat.png" />
             <form id="animalbutton" action="titanic.html">
               <input id="animalbutton" type="submit" value="Read Article" />
