--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <!-- end menu row -->
       <div id="menu-row" class="row">
         <div id="box">
-          <h1>Featured</h1>
+          <h1 id="featured">Featured</h1>
         </div>
         <div id="homebox" class="grid-container">
           <div id="grid-item" class="grid-item">
