--- a/index.html
+++ b/index.html
@@ -23,29 +23,15 @@
       <div class="row">
         <div class="col-sm-4" id="logo"></div>
       </div>
-      <!-- end logo row -->
-      <div class="row">
-        <div class="col-sm-12" id="menu">
-          <nav id="row" class="navbar navbar-expand-sm bg-info navbar-light">
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-              <span>
-                <a href="index.html">
-                  <img id="logo" class="img-responsive" src="logo.png" />
-                </a>
-              </span>
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    id="navbardrop"
-                    data-toggle="dropdown"
-                    >Featured</a
-                  >
-                  <div class="dropdown-menu">
+      <ul class="topnav">
+        <li><a class="active" href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li class="right"><a href="#about">About</a></li>
+      </ul>
+      <!-- end menu row -->
+      <!--
+        <div class="dropdown-menu">
                     <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
                     <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
                     <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
@@ -54,19 +40,7 @@
                     <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
                     <a class="dropdown-item" href="animals.html">Animals Aren't Real!</a>
                   </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="facts.html">Facts</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </div>
-      <!-- end menu row -->
+      -->
       <div id="menu-row" class="row">
         <div id="box">
           <h1 id="featured">Featured</h1>
