--- a/index.html
+++ b/index.html
@@ -19,79 +19,81 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <ul class="topnav">
-      <li><a class="active" href="#home">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li class="right"><a href="#about">About</a></li>
-    </ul>
-    <!-- end menu row -->
-    <!--
-      <div class="dropdown-menu">
-                  <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
-                  <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
-                  <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
-                  <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
-                  <a class="dropdown-item" href="vaccine.html">Vaccine = Mind Control!</a>
-                  <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
-                  <a class="dropdown-item" href="animals.html">Animals Aren't Real!</a>
-                </div>
-    -->
-    <div id="menu-row" class="row">
-      <div id="box">
-        <h1 id="featured">Featured</h1>
-      </div>
-      <div id="homebox" class="grid-container">
-        <div id="grid-item" class="grid-item">
-          <h2>Flat Is Fact</h2>
-          <img id="earthphoto" src="earthphoto.jpg" />
-          <form id="flatreadbutton" action="flatEarth.html">
-            <input id="flatreadbutton" type="submit" value="Read Article" />
-          </form>
+    <div class="container">
+      <ul id="topnav" class="topnav">
+        <li><a class="active" href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li class="right"><a href="#about">About</a></li>
+      </ul>
+      <!-- end menu row -->
+      <!--
+        <div class="dropdown-menu">
+                    <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
+                    <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
+                    <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
+                    <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
+                    <a class="dropdown-item" href="vaccine.html">Vaccine = Mind Control!</a>
+                    <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
+                    <a class="dropdown-item" href="animals.html">Animals Aren't Real!</a>
+                  </div>
+      -->
+      <div id="menu-row" class="row">
+        <div id="box">
+          <h1 id="featured">Featured</h1>
         </div>
-        <div id="grid-item" class="grid-item">
-          <h2>Do Vaccines Control You?</h2>
-          <img id="vaccineBrain" src="vaccineBrain.jpg" />
-          <form id="vaccinebutton" action="vaccine.html">
-            <input id="vaccinebutton" type="submit" value="Read Article" />
-          </form>
-        </div>
-        <div id="grid-item" class="grid-item">
-          <h2>Did the Titanic Really Ever Sink?</h2>
-          <img id="titanicjpg" src="titanic.jpg" />
-          <form id="titanicbutton" action="titanic.html">
-            <input id="titanicbutton" type="submit" value="Read Article" />
-          </form>
-        </div>  
-        <div id="grid-item" class="grid-item">
-          <h2>birds</h2>
-          <img id="birdfishjpg" src="birdfish.jpg" />
-          <form id="birdbutton" action="birds.html">
-            <input id="birdbutton" type="submit" value="Read Article" />
-          </form>
-        </div>
-        <div id="grid-item" class="grid-item">
-          <h2>bees</h2>
-          <img id="beejpg" src="bee.jpg" />
-          <form id="beebutton" action="bees.html">
-            <input id="beebutton" type="submit" value="Read Article" />
-          </form>
-        </div>
-        <div id="grid-item" class="grid-item">
-          <h2>animals</h2>
-          <img id="animaljpg" src="bat.png" />
-          <form id="animalbutton" action="titanic.html">
-            <input id="animalbutton" type="submit" value="Read Article" />
-          </form>
-        </div>  
-        <div id="grid-item" class="grid-item">
-          Drugs give you are the good for you
-        </div>
-        <div id="grid-item" class="grid-item">
-          Electricity isnt real
-        </div>
-        <div id="grid-item" class="grid-item">
-          9/11 didnt happen
+        <div id="homebox" class="grid-container">
+          <div id="grid-item" class="grid-item">
+            <h2>Flat Is Fact</h2>
+            <img id="earthphoto" src="earthphoto.jpg" />
+            <form id="flatreadbutton" action="flatEarth.html">
+              <input id="flatreadbutton" type="submit" value="Read Article" />
+            </form>
+          </div>
+          <div id="grid-item" class="grid-item">
+            <h2>Do Vaccines Control You?</h2>
+            <img id="vaccineBrain" src="vaccineBrain.jpg" />
+            <form id="vaccinebutton" action="vaccine.html">
+              <input id="vaccinebutton" type="submit" value="Read Article" />
+            </form>
+          </div>
+          <div id="grid-item" class="grid-item">
+            <h2>Did the Titanic Really Ever Sink?</h2>
+            <img id="titanicjpg" src="titanic.jpg" />
+            <form id="titanicbutton" action="titanic.html">
+              <input id="titanicbutton" type="submit" value="Read Article" />
+            </form>
+          </div>  
+          <div id="grid-item" class="grid-item">
+            <h2>birds</h2>
+            <img id="birdfishjpg" src="birdfish.jpg" />
+            <form id="birdbutton" action="birds.html">
+              <input id="birdbutton" type="submit" value="Read Article" />
+            </form>
+          </div>
+          <div id="grid-item" class="grid-item">
+            <h2>bees</h2>
+            <img id="beejpg" src="bee.jpg" />
+            <form id="beebutton" action="bees.html">
+              <input id="beebutton" type="submit" value="Read Article" />
+            </form>
+          </div>
+          <div id="grid-item" class="grid-item">
+            <h2>animals</h2>
+            <img id="animaljpg" src="bat.png" />
+            <form id="animalbutton" action="titanic.html">
+              <input id="animalbutton" type="submit" value="Read Article" />
+            </form>
+          </div>  
+          <div id="grid-item" class="grid-item">
+            Drugs give you are the good for you
+          </div>
+          <div id="grid-item" class="grid-item">
+            Electricity isnt real
+          </div>
+          <div id="grid-item" class="grid-item">
+            9/11 didnt happen
+          </div>
         </div>
       </div>
     </div>
