--- a/index.html
+++ b/index.html
@@ -21,10 +21,19 @@
   <body>
     <div class="container">
       <ul id="topnav" class="topnav">
-        <li><a class="active" href="#home">Home</a></li>
-        <li><a href="#news">News</a></li>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
+          <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
+          <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
+          <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
+          <a class="dropdown-item" href="vaccine.html">Vaccine = Mind Control!</a>
+          <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
+          <a class="dropdown-item" href="animals.html">Animals Aren't Real!</a>
+        </div>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="#news">Featured</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li class="right"><a href="#about">About</a></li>
+        <li class="right"><a href="abouth.html">About</a></li>
       </ul>
       <!-- end menu row -->
       <!--
