--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
   <body>
     <div class="container">
       <ul id="topnav" class="topnav">
+        <li><a class="active" href="index.html">Home</a></li>
         <div class="dropdown">
-          <span>Mouse over me</span>
+          <button class="dropbtn">Dropdown</button>
           <div class="dropdown-content">
-          <p>Hello World!</p>
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
           </div>
         </div>
-        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="#news">Featured</a></li>
         <li><a href="#contact">Contact</a></li>
         <li class="right"><a href="abouth.html">About</a></li>
