added contact page

--- a/index.html
+++ b/index.html
@@ -22,17 +22,11 @@
     <div class="container">
       <ul id="topnav" class="topnav">
         <li><a class="active" href="index.html">Home</a></li>
-        <div class="dropdown">
-          <button class="dropbtn">Dropdown</button>
-          <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-          </div>
-        </div>
-        <li><a href="#news">Featured</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li class="right"><a href="abouth.html">About</a></li>
+        <li><a href="facts.html">Featured</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li class="right">
+          <a href="about.html">About</a>
+        </li>
       </ul>
       <!-- end menu row -->
       <!--
