--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="container">
+    <!-- <div class="container"> -->
       <ul id="topnav" class="topnav">
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="facts.html">Featured</a></li>
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
     <!-- end container div -->
   </body>
 </html>
